Wed Sep  4 20:22:43 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem_normal): Add assertions.

Wed Sep  4 19:18:40 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h (vm_state_version_t): prefer LONG_LONG to uint64_t.

Wed Sep  4 16:28:14 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h (vm_state_version_t): use uint64_t when it is larger than
	  LONG_LONG, and fallback to unsigned long.

Wed Sep  4 15:37:05 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/utf8_mac-tbl.rb: fix r42789.
	  Fix conversion table and logic. [ruby-dev:47680]

Wed Sep  4 14:08:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* class.c, compile.c, eval.c, gc.h, insns.def, internal.h, method.h,
	  variable.c, vm.c, vm_core.c, vm_insnhelper.c, vm_insnhelper.h,
	  vm_method.c: Implement class hierarchy method cache invalidation.

	  [ruby-core:55053] [Feature #8426] [GH-387]

Wed Sep  4 11:13:40 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_gsub): use BEG(0) for whole matched position not
	  return value from rb_reg_search(), for \K matching.
	  [ruby-dev:47694] [Bug #8856]

Wed Sep  4 11:11:37 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (SOLIBS): LIBRUBY_SO also needs linking with gmp, to
	  run worker processes in test-all on non-ELF platforms.

Tue Sep  3 23:01:41 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/parser/test_tree.rb
	  (TestTreeParser::TestInvalid#test_unmatched_close_tag):
	  Compute expected value from test value.

Tue Sep  3 22:59:58 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/parsers/treeparser.rb (REXML::Parsers::TreeParser#parse):
	  Add source information to parse exception on no close tag error.
	  [Bug #8844]  [ruby-dev:47672]
	  Patch by Ippei Obayashi. Thanks!!!
	* test/rexml/parser/test_tree.rb: Add a test for the above case.

Tue Sep  3 22:57:57 2013  Kouhei Sutou  <kou@cozmixng.org>

	* test/rexml/parser/test_tree.rb: Fix test name to describe test
	  content.
