@@ -1,3 +1,8 @@
+Wed Sep  4 22:56:49 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* numeric.c (NUM_STEP_GET_INF): split from NUM_STEP_SCAN_ARGS(), since
+	  inf is not used in num_step_size().
+
 Wed Sep  4 20:22:43 2013  Tanaka Akira  <akr@fsij.org>
 
 	* bignum.c (bigdivrem_normal): Add assertions.
